K-2 CORS Policy added

--- a/CRUD-ASP.NET CORE-WEBAPI/appsettings.json
+++ b/CRUD-ASP.NET CORE-WEBAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "CORSURLS": {
+    "AllowedURLS": "http://localhost:8000;http://localhost:3000"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-5QMBJBV;Database=SampleApplication;Integrated Security=SSPI;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
